traefik/traefik-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
spec:
  type: ClusterIP
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
