traefik/traefik-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curryware-traefik-ingress
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: istio.curryware.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: curryware-front-end
            port:
              name: web
